# meta-disco

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  Modelfile  README.md  config.yaml  demo-ollama-hprc-plotly-dashboard.ipynb  demo-ollama-hprc-r2-plotly-dashboard.ipynb  demo-ollama-llama3.2-AnVIL-metadata-impute.ipynb  demo-ollama-llama3.2-AnVIL-metadata-wrangler.ipynb  demo.ipynb  demo_rule_engine.py  environment.yaml  metadisco-inference.py  ollama-llama3.2-AnVIL-agent.py  ollama-meta-submit.sh  ollama_llama3.2_AnVIL_findability_merge.tsv  ollama_llama3.2_AnVIL_response_5_AnVIL_agent.tsv  ollama_llama3.2_response_AnVIL_agent.tsv  pip-packages.txt  post_setup.sh  pyproject.toml  run_classification.py  setup.sh
$TMPDIR/probe_ev/: in.json  out.json
$TMPDIR/probe_ev/evidence/gfa/de/: deadbeef.json
.github/workflows/: ci.yml
anvil-harmonizer/modelfiles/: harmonizer_v1.Modelfile
demos/: demo-ollama-hprc-plotly-dashboard.ipynb  demo-ollama-llama3.2-AnVIL-metadata-agent.ipynb  demo-ollama-llama3.2-AnVIL-metadata-impute.ipynb  demo-ollama-llama3.2-AnVIL-metadata-wrangler.ipynb  demo-ollama-llama3.2.ipynb
docs/: PRD-metadata-classifier.md  anvil-coverage-report.md  classification-hierarchy.md  classification_report.md  classification_slides.md  coverage-dashboard-template.html  coverage-dashboard.html  derived-file-data-model.md  file-formats-reference.md  header_classification_rules.md  index.html  validation-dashboard-template.html  validation-dashboard.html  validation-report.md
docs/plans/: 155-fetch-failures-not-classified.md  172-typed-record-boundary.md
findability-funk/: Dockerfile  build.sh
models/: README.md
rules/: classification_rules.yaml  unified_rules.yaml
schema/: .gitignore  Makefile  README.md  pyproject.toml  setup.sh
schema/scripts/: validate_outputs.py
schema/src/meta_disco/models/: anvil_models.py
schema/src/meta_disco/schema/: anvil_file.yaml  classification.yaml
schema/tests/: test_metadata_model_drift.py  test_output_validation.py  test_validation.py
schema/tests/test_data/: invalid_file.yaml  valid_file.yaml
scripts/: classify_auxiliary_genomic.py  classify_bam_files.py  classify_bed_files.py  classify_fasta_files.py  classify_fastq_files.py  classify_headers.py  classify_hprc_files.py  classify_images.py  classify_index_files.py  classify_remaining_files.py  classify_tar_files.py  classify_vcf_files.py  download_anvil_metadata.py  download_hprc_catalogs.py  fetch_bam_headers.py  fetch_bed_headers.py  fetch_fasta_headers.py  fetch_fastq_headers.py  fetch_vcf_headers.py  generate_classification_report.py  generate_coverage_report.py  generate_validation_report.py  propagate_index_metadata.py  rerun_all_classifications.py  run_batch_classification.py  validate_1000g_samples.py  validate_against_hprc.py  validate_ena_accessions.py  validate_hprc_samples.py  validate_metadata.py  validate_outputs.py  validate_reference_assemblies.py
src/meta_disco/: __init__.py  evidence.py  fetchers.py  file_name.py  file_types.py  header_classifier.py  metadata_schema.py  models.py  output_utils.py  pipeline.py  records.py  repository.py  rule_engine.py  rule_loader.py  schema_vocab.py  summaries.py  validation_maps.py
src/meta_disco/models/: anvil_models.py
src/meta_disco/rules/: __init__.py  unified_rules.yaml
src/meta_disco/schema/: __init__.py  classification.yaml  metadata.yaml  metadata_model.py
src/meta_disco/validators/: __init__.py  contig_lengths.py  header_extractors.py  read_name_parsers.py
tests/: conftest.py  metadata_fixtures.py  test_bed_classification.py  test_download_anvil_metadata.py  test_evals.py  test_evidence.py  test_fetchers.py  test_field_accessors.py  test_file_name.py  test_header_classifier.py  test_header_extractors.py  test_hprc_validation.py  test_index_propagation.py  test_metadata_schema.py  test_orchestration.py  test_output_shape.py  test_package_data.py  test_pipeline.py  test_records.py  test_repository.py  test_rule_engine.py  test_rule_vocabulary.py  test_validate_metadata_script.py  test_validation.py
tests/fixtures/golden/: expected_output.json
tests/test_data/: invalid_file.yaml
