[tool.poetry]
name = "meta-disco"
version = "0.1.0"
description = "Rule engine for classifying biological data files"
authors = ["AnVIL Team"]
readme = "README.md"
packages = [{include = "meta_disco", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
requests = "^2.31"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "F",     # pyflakes (unused imports, undefined names, etc.)
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort (import ordering)
]
ignore = [
    "E501",  # line too long (we use line-length=120 but don't enforce strictly)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "E402"]  # unused imports ok in tests; E402 for helper functions defined before imports

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
