[project]
name = "meta-disco"
version = "0.1.0"
description = "Rule engine for classifying biological data files"
authors = [{ name = "AnVIL Team" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# src layout; the schema YAML under src/meta_disco/schema/ ships as package data.
packages = ["src/meta_disco"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "F",     # pyflakes (unused imports, undefined names, etc.)
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort (import ordering)
]
ignore = [
    "E501",  # line too long (we use line-length=120 but don't enforce strictly)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "E402"]  # unused imports ok in tests; E402 for helper functions defined before imports

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
